--- a/b_step_01/css/a_12_padding.css
+++ b/b_step_01/css/a_12_padding.css
@@ -44,7 +44,7 @@
 }
 
 /* ----------------------------------- */
-.none { display:none; }
+/* .none { display:none; } */
 .more_p_01 { padding:20px; }
 .more_p_02 { padding:20px 40px; }
 .more_p_03 { padding:10px 20px 40px; }
