--- a/b_step_01/css/a_16_display.css
+++ b/b_step_01/css/a_16_display.css
@@ -12,8 +12,8 @@ ul, li {list-style: none;}
 
 .part {
   width: 95%; height:auto;
-  margin:auto;
-  background-color: #fff;
+  margin:auto; margin-bottom:20px;
+  background-color: #ffd;
 }
 
 .exam {  width: 100%; height: auto; }
@@ -26,10 +26,34 @@ ul, li {list-style: none;}
 li{ 
   float:left;
   width:100px; height:100px;
+  padding:10px; box-sizing: border-box;
   font-size:1.2rem; font-weight: bold;
   background-image:linear-gradient(45deg, #adf, #fc7);
   background-color: #daa;
 }
 
+li> a {
+  display: block; 
+  width: 100%; height: 100%;
+}
+
 .block { display:block; }
 .none {  display:none;}
+
+.visible { visibility:visible;}
+.hidden { visibility: hidden;}
+
+.opacity_1 { opacity: 1;}
+.opacity_5 { opacity: 0.5;}
+.opacity_0 { opacity: 0;}
+
+
+.transparent { background-image:none; background-color:transparent; }
+/* .transparent > a { color: inherit;} */
+.alpha_01 { background-image: none; background-color: #a5f3d711;}
+.alpha_02 { background-image: none; background-color: rgba(255,0,255,0.3);}
+.alpha_03 { background-image: none; background-color: hsla(45,100%,50%, 0.5);}
+
+.alpha_01 > a { background-color: rgba(255,0,50,0.5);}
+.alpha_02 > a { background-color: rgba(255,0,50,0.5);}
+.alpha_03 > a { background-color: rgba(255,0,50,0.5);}
