--- a/c_project_01/css/src/main.css
+++ b/c_project_01/css/src/main.css
@@ -3,9 +3,15 @@
 /* reset.css __________________________________________ */
 body {margin:0;}
 
+/* common.css _________________________________________ */
+
+
+
+
+
 /* design __________________________________________ */
 #wrap {
-  width:100%; min-width:1440px; 
+  width:100%; min-width:960px; /* min-width:1440px; */
   height:auto; min-height:500px;
   margin:auto;
 }
@@ -17,7 +23,8 @@ body {margin:0;}
   background-color: #ccc; }
   
   .area_head {
-    width: 100%; max-width:1440px; height: auto;
+    width: 100%; /* max-width:1440px; */
+    height: auto;
     margin:auto;
   }
   .area_head::after {
@@ -72,7 +79,7 @@ background-color: #aaa; }
   padding-top:50px; box-sizing: border-box;
   background-color: #aaa; }
 #subBox > .area {
-  width: 1100px; height: 300px;
+  width: 95%; min-width:940px; max-width:1280px; height: 300px;
   margin:auto;
   background-color: #ddd;
   }
@@ -83,7 +90,8 @@ background-color: #aaa; }
   padding-top:175px; box-sizing: border-box;
   background-color: #eee; }
 #bestBox > .area {
-  width: 1100px; height: 380px; 
+  width:95%; /* width: 1100px;*/
+  max-width:1280px; height: 380px; 
   margin:auto;
   background-color: #aaa;
 }
