--- a/c_project_01/css/src/main.css
+++ b/c_project_01/css/src/main.css
@@ -4,11 +4,10 @@
 body {margin:0;}
 
 /* common.css _________________________________________ */
-
-
-
-
-
+.max_width_01 { 
+  width:95%; min-width:940px; max-width:1280px;  
+  margin:auto;}
+  
 /* design __________________________________________ */
 #wrap {
   width:100%; min-width:960px; /* min-width:1440px; */
@@ -79,7 +78,7 @@ background-color: #aaa; }
   padding-top:50px; box-sizing: border-box;
   background-color: #aaa; }
 #subBox > .area {
-  width: 95%; min-width:940px; max-width:1280px; height: 300px;
+  height: 300px;
   margin:auto;
   background-color: #ddd;
   }
@@ -90,9 +89,7 @@ background-color: #aaa; }
   padding-top:175px; box-sizing: border-box;
   background-color: #eee; }
 #bestBox > .area {
-  width:95%; /* width: 1100px;*/
-  max-width:1280px; height: 380px; 
-  margin:auto;
+  height: 380px; 
   background-color: #aaa;
 }
 
@@ -113,8 +110,7 @@ background-color: #aaa; }
   padding:10px 0; box-sizing: border-box;
   background-color: #999; }
 .sponsor_area {
-  width: 940px; height: 80px; 
-  margin:auto; 
+  height: 80px;   
   background-color: #fff;}
 
 /* #footBox ____________________________________________  */
@@ -124,8 +120,7 @@ background-color: #aaa; }
   background-color: #777; }
 
 .area_foot {
-  width: 940px; height: auto;
-  margin:auto;  
+  height: auto;  
 }
   
   .info_logo{
@@ -134,7 +129,7 @@ background-color: #aaa; }
     background-color: #aaa;
     }
   .info_company{
-    width: 940px; height: 135px;
+    width:100%; height: 135px;
     background-color: #aaa;
   }
 
