--- a/c_project_01/css/src/main.css
+++ b/c_project_01/css/src/main.css
@@ -136,3 +136,25 @@ background-color: #aaa; }
     background-color: #aaa;
   }
 
+/* ----------------------------------------------------- */
+/*
+.selector { 
+  content:" ";
+  
+  display:block;
+  
+  position:static; 
+  float:left;
+  
+  width:100%; min-width:100%; max-width:100%;
+  height:20px; min-height:100%; max-height:100%;
+  
+  margin:0; padding:0; border:0; box-sizing:1px solid #000;
+  
+  font-size:10px; font-weight: 400;  color:#fff;
+  
+  background-color: #fff;
+  
+  box-shadow: 1px 2px 2px #333;  
+} 
+*/
