--- a/b_step_02/css/src/a_content.css
+++ b/b_step_02/css/src/a_content.css
@@ -1,48 +1,44 @@
-@charset "UTF-8";
+
 /* a_content.css */
-
-/* reset.css */
-
-body { 
-  margin: 0; line-height:100%;
+#wrap {
+  width: 900px; height: auto;
+  margin:auto; padding-top:20px; padding-bottom: 50px;
 }
 
-h1,h2,h3,h4,h5,h6,p,pre,q,blockquote,ul,ol,li,dl,dt,dd,img { 
-  margin: 0; padding: 0; border:0;
-  font-size:100%;  font:inherit;
-  vertical-align: baseline;
+h1{
+  width: 80%; 
+  margin:auto; margin-bottom: 10px;
+  font-weight: 900; text-align:center; font-size:20px;
 }
 
-ul,ol {list-style: none;}
-
-hr {
-  margin:0; border:0;
-  border-top:1px solid #777;}
-
-a { color:inherit; text-decoration: none;}
-a:hover { text-decoration:underline; }
-button { 
-border:0; font-size:100%; text-transform: uppercase; background-color: transparent; cursor: pointer;}
-button:hover {text-decoration: underline;}
-
-strong,b,em,i,u,ins,del {
-  font-weight:normal; font-style:normal; text-decoration: none;
+.part {
+  width: 90%; height: auto;
+  margin:50px auto; padding:20px; box-sizing: border-box;
+  border:1px solid #777; border-radius:10px;
 }
 
-blockquote, q {	quotes: none;}
-blockquote:before, blockquote:after,
-q:before, q:after {	content: '';	content: none; }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+h2 {
+  width: 100%; height: 30px; 
+  margin-bottom: 5px;
+  font-size: 20px; font-weight: 700; line-height:1.6;
+}
+p {
+  width: 100%; height: auto;
+  margin-bottom:15px; padding: 5px; 
+  background-color: rgba(230,230,255,0.8);
+  border-radius:5px;
 }
 
-
-/* common.css */
-.clearfix:after,
-.clearfix::after { content:""; display:block; width:100%; height:0; clear:both;}
-
-
-/* design */
-
-
+.list_item{  padding: 10px; }
+li::before {
+  content: counter(num)"."; color: #f00;
+  display: inline-block; width:15px; font-weight: 900; margin-right:5px;}
+li {margin-bottom: 20px; counter-increment: num}
+li a {
+  padding-bottom: 5px;  border-bottom:1px solid rgb(230,230,230); 
+  font-weight: 700; 
+}
+li a:hover, li a:focus {
+  text-decoration: none; border-bottom:2px solid #f00;
+ }
+li:last-child {margin-bottom:10px;}
