--- a/b_step_02/css/common/reset.css
+++ b/b_step_02/css/common/reset.css
@@ -37,3 +37,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+header,article,section,footer,nav,aside,figure,figcaption,main {
+  display:block;
+}
