--- a/b_step_02/css/src/b_04_position.css
+++ b/b_step_02/css/src/b_04_position.css
@@ -31,7 +31,26 @@
 
 .fixed { 
   position: fixed;
-  top:0; left:0; 
+  top:100px; left:90px; 
+  z-index:100;
   /* right:0; bottom:0; 
   margin:auto; */
+}
+
+.absolute {
+  position:absolute;
+  bottom:-50px; left:0;
+  /* top:0; right:0; */
+  /* margin:auto; */
+}
+
+.relative {
+  position: relative; 
+  top:150px; left:-400px;
+  z-index:-200;
+}
+
+.ex_wrap > ul {
+  position:relative;
+  top:200px; left:-50px;
 }
