--- a/c_project_01/css/src/main.css
+++ b/c_project_01/css/src/main.css
@@ -5,20 +5,22 @@
 #wrap {
   /* width:100%;  */
   /* min-width:960px;  */
-
   width: 1440px;
   height:auto; min-height:500px;
-  margin:auto;
+  margin:auto; padding-top:100px;
 }
 
 /* #headBox __________________________________________ */
-#headBox    { 
-  width: 100%; height: auto; 
+#headBox { 
+  position: fixed; top: 0; left:0; /* right:0; margin:auto; */
+  z-index:1500;
+  width: 100%; /* max-width:1440px;*/
+  height: auto; 
   padding:20px 50px 10px; box-sizing: border-box;
   background-color: #ccc; }
   
   .area_head {
-    width: 100%; /* max-width:1440px; */
+    width: 100%; max-width:1440px;
     height: auto;
     margin:auto;
   }
@@ -31,10 +33,42 @@
   float:left; width: 120px;height: 70px; 
   background-color: #777;}
 #navBox { 
-  float:right; width: 510px; height: 70px; 
-  background-color: #777;}
+  float:right; width: 510px; height:auto; /* height: 70px; */
+  /* background-color: #777; */
+  }
+  .unb {
+    float:right; width: 270px; height:26px; 
+    margin-bottom: 10px;
+    /* background-color: #fff; */
+  }
+  .gnb {
+    float:right; width: 510px; height:34px;
+    /* background-color: #ffa; */
+  }
 
+  .unb ul, 
+  .gnb ul { width: 100%; height: auto; box-sizing: border-box;}
 
+  .unb ul { padding:3px 5px; }
+  .unb li {
+    float:left; width:50px; height:20px;
+    margin-left:20px;
+    font-size:10px;
+    background-color: #0cc;
+  }
+  
+  .gnb ul { padding:4px 5px;}
+  .gnb li {
+    float:left; width:70px; height:25px;
+    margin-left:16px;
+    background-color: #0cc;
+  }
+  
+  /* .unb li:first-child{margin-left:0;} */
+  /* .gnb li:first-child{margin-left:0;} */
+  
+  .first_margin li:first-child { margin-left:0;}
+  
 /* #slideBox __________________________________________ */
 #slideBox   { 
 width: 100%; height: 600px; padding-top:100px; box-sizing: border-box;
