--- a/c_project_01/css/src/main.css
+++ b/c_project_01/css/src/main.css
@@ -130,13 +130,26 @@ background-color: #aaa; }
 
 /* #subBox ____________________________________________  */
 #subBox     { 
+  position: relative;
   width: 100%; height: 350px; 
-  padding-top:50px; box-sizing: border-box;
+  /* padding-top:50px; box-sizing: border-box; */
   background-color: #aaa; }
 #subBox > .area {
-  height: 300px;
+  position: absolute; bottom: 0; left:0; right:0;
+  height: 300px; 
   margin:auto;
   background-color: #ddd;
+  }
+  .sub_area {
+    float:right;
+    width: 400px; height: 200px;
+    margin-top:52px; margin-right:70px;
+    background-color: #0cc;
+  }
+  .sub_area_img {
+    float:left;
+    width: 460px; height: 300px;
+    background-color: #0cc;
   }
 
 /* #bestBox ____________________________________________  */
