--- a/b_step_02/css/common/common.css
+++ b/b_step_02/css/common/common.css
@@ -5,7 +5,8 @@
 
 .none {display: none;}
 
-
+.first_margin > li:first-child { margin-left: 0; }
+.last_margin > li:last-child { margin-right: 0; }
 
 /* 코드 예제 세팅 */
 
