--- a/b_step_02/css/common/reset.css
+++ b/b_step_02/css/common/reset.css
@@ -38,6 +38,8 @@ table {
 	border-spacing: 0;
 }
 
+abbr { text-decoration: none;}
+
 
 header,article,section,footer,nav,aside,figure,figcaption,main {
   display:block;
