pt단위 및 percent단위

--- a/b_step_02/css/src/c_05_unit.css
+++ b/b_step_02/css/src/c_05_unit.css
@@ -7,15 +7,33 @@
 /* 공통 색상  ----------------------------- */
 .unit_set {  color:#fff;  background-color: #a57; }
 .unit_set p {margin:auto; margin-top:50px; color:#171717; background-color: #fc0; }
-.unit_set button { margin-top:10px; text-align: left; background-color: #fff; }
+.unit_set button { display:block; margin-top:10px; text-align: left; background-color: #fff; }
 .unit_set span { 
   display:block; margin:20px; background-color: rgba(50, 100, 50, 0.5);}
 .unit_set strong {
   display:block; margin:20px; color:#fff; background-color: rgba(10,10,10,0.7); }
 
-/* pixel값 단위  ----------------------------- */
-.pixel_unit { width: 640px; height: 640px; }
+/* pixel값 단위(px)  ----------------------------- */
+.pixel_unit { width: 640px; height: 640px; display: none;}
 .pixel_unit p { width:320px; height:320px; }
 .pixel_unit button { width:160px; height:160px;}
 .pixel_unit span { width:320px; height:320px;}
 .pixel_unit strong { width:160px; height:160px;}
+
+/* point값 단위(pt)  ----------------------------- */
+/* 
+  16px === 12pt
+  ex: 640px / 16 * 12 => ?pt
+*/
+.point_unit { width: 480pt; height: 480pt; }
+.point_unit p{ width: 240pt; height: 240pt; }
+.point_unit button{ width: 120pt; height: 120pt; }
+.point_unit span{ width: 240pt; height: 240pt; }
+.point_unit strong{ width: 120pt; height: 120pt; }
+
+/* percent 단위(%) ------------------------------ */
+.percent_unit { width:640px; height:640px; }
+.percent_unit p{ width:50%; height:50%; padding:0;}
+.percent_unit button{ width:50%; height:50%; }
+.percent_unit span{ width:200%; height:200%; }
+.percent_unit strong{ width:50%; height:50%; }
