--- a/b_step_02/css/src/c_05_unit.css
+++ b/b_step_02/css/src/c_05_unit.css
@@ -1,20 +1,21 @@
 /* c_05_unit.css */
 
-
+/* 브라우저기준{} */
+:root { font-size:16px; }
 .code_exam { width:900px; }
-
 
 /* 공통 색상  ----------------------------- */
 .unit_set {  color:#fff;  background-color: #a57; }
 .unit_set p {margin:auto; margin-top:50px; color:#171717; background-color: #fc0; }
-.unit_set button { display:block; margin-top:10px; text-align: left; background-color: #fff; }
+.unit_set button { 
+  display:block; margin-top:10px; text-align: left; background-color: #fff; }
 .unit_set span { 
   display:block; margin:20px; background-color: rgba(50, 100, 50, 0.5);}
 .unit_set strong {
   display:block; margin:20px; color:#fff; background-color: rgba(10,10,10,0.7); }
 
 /* pixel값 단위(px)  ----------------------------- */
-.pixel_unit { width: 640px; height: 640px;}
+.pixel_unit { width: 640px; height: 640px; }
 .pixel_unit p { width:320px; height:320px; }
 .pixel_unit button { width:160px; height:160px;}
 .pixel_unit span { width:320px; height:320px;}
@@ -43,23 +44,32 @@
   16px === 1em  
   ex: ( 640px / 16 )em
 */
-
 .em_unit { width: 40em; height: 40em; }
 .em_unit p { width:20em; height:20em; }
 .em_unit button { width:10em; height:10em; }
 .em_unit span { width:20em; height:20em; }
 .em_unit strong { width:10em; height:10em; }
 
-
-
 /* rem 단위(rem) ------------------------------ */
 /*
   16px === 1em === 1rem 
   ex: ( 640px / 16 )rem
 */
-
 .rem_unit { width: 40rem; height: 40rem; }
 .rem_unit p { width:20rem; height:20rem; }
 .rem_unit button { width:10rem; height:10rem; }
 .rem_unit span { width:20rem; height:20rem; }
 .rem_unit strong { width:10rem; height:10rem; }
+
+/* em 단위(em) + font-size ------------------------------ */
+/*
+  16px === 1em  
+  ex: ( 640px / 16 )em
+*/
+/* .part:not(.part:last-child) {display:none;} */
+
+.em_unit_2 { width: 40em; height: 40em; font-size:1em;}
+.em_unit_2 p { width:40em; height:40em; font-size:0.5em; }
+.em_unit_2 button { width:40em; height:40em; font-size:0.5em; }
+.em_unit_2 span { width:40em; height:40em; font-size:2em;}
+.em_unit_2 strong { width:40em; height:40em; font-size: 0.5em;}
