--- a/c_project_01/code/css/common/common.css
+++ b/c_project_01/code/css/common/common.css
@@ -8,6 +8,16 @@
 .max_width_01 { 
   width:95%; min-width:940px; max-width:1280px;  
   margin:auto;}
+
+.first_margin > li:first-child { margin-left: 0; }
+.last_margin > li:last-child { margin-right: 0; }
+
   
-.blind { width:0; height:0; overflow:hidden; }
+.blind_area a {
+  display: block; width: 100%; height: 100%; 
+  background-repeat: no-repeat; background-position: 50% 50%; }
+
+.blind_area a>span ,
+.blind_area button>span ,
+.blind {  display:block; position: absolute; z-index:-1; width:0; height:0; overflow: hidden; }
 
