--- a/c_project_01/code/css/common/reset.css
+++ b/c_project_01/code/css/common/reset.css
@@ -22,8 +22,8 @@ hr {
 a { color:inherit; text-decoration: none;}
 a:hover { text-decoration:underline; }
 button { 
-padding: 0;
-border:0; font-size:100%; text-transform: uppercase; background-color: transparent; cursor: pointer;}
+  padding: 0; border:0; font-size:100%; 
+  text-transform: uppercase; background-color: transparent; cursor: pointer;}
 button:hover {text-decoration: underline;}
 
 strong,b,em,i,u,ins,del {
@@ -39,7 +39,6 @@ table {
 }
 
 abbr { text-decoration: none;}
-
 
 header,article,section,footer,nav,aside,figure,figcaption,main {
   display:block;
