--- a/c_project_01/code/css/src/main_v2.css
+++ b/c_project_01/code/css/src/main_v2.css
@@ -17,7 +17,7 @@
   width: 100%; /* max-width:1440px;*/
   height: auto; 
   padding:20px 50px 10px; box-sizing: border-box;
-  background-color: #ccc; }
+  background-color: #fff; }
   
   .area_head {
     width: 100%; max-width:1440px;
@@ -30,19 +30,27 @@
   } 
   
 #logo { 
-  float:left; width: 120px;height: 70px; 
-  background-color: #777;}
+  float:left; width: 120px;height: 70px; }
+  #logo> a {
+    /* display:block; width: 100%; height: 100%;  */
+    background-image: url("../../img/headBox/osam_logo.png");
+    background-image: url("../../img/headBox/osam_logo.svg");
+    /* background-repeat: no-repeat;
+    background-position: 50% 50%; */
+  }
+  
 #navBox { 
-  float:right; width: 510px; height:auto; /* height: 70px; */
+  float:right; width: 540px; height:auto; /* height: 70px; */
   /* background-color: #777; */
   }
   .unb {
     float:right; width: 270px; height:26px; 
     margin-bottom: 10px;
     /* background-color: #fff; */
-  }
+  }  
+ 
   .gnb {
-    float:right; width: 510px; height:34px;
+    float:right; width:auto; min-width: 510px; height:34px;
     /* background-color: #ffa; */
   }
 
@@ -52,16 +60,34 @@
   .unb ul { padding:3px 5px; }
   .unb li {
     float:left; width:50px; height:20px;
-    margin-left:20px;
-    font-size:10px;
-    background-color: #0cc;
+    margin-left:20px;    
+    /* background-color: #0cc; */
   }
+  .unb li:nth-child(1) { float:right; }
+  .unb li:nth-child(2) { margin-left: 0; }
   
-  .gnb ul { padding:4px 5px;}
+  .unb a { 
+    display: block; width: 100%; height: 100%; 
+    word-spacing:-3px; text-transform:capitalize;
+    color:#505050; font-size:0.75rem; text-align: center;
+    }
+  
+  .gnb ul {float:right; width:auto; padding:4px 5px;}
   .gnb li {
-    float:left; width:70px; height:25px;
-    margin-left:16px;
-    background-color: #0cc;
+    float:left; width:auto; height:25px;
+    /* margin-left:14px; */
+    padding:0 7px; border-right:1px solid #aaa;
+    text-align: center;
+  }
+  .gnb li:last-child {border:0; padding-right: 0;}
+  .gnb li:first-child {padding-left: 0;}
+  
+  .gnb li a {
+    padding:5px 10px;
+    line-height: 25px;
+    font-size:1rem; color:#171717;
+    font-weight: 700;
+    text-transform:capitalize;
   }
   
   /* .unb li:first-child{margin-left:0;} */
