--- a/c_project_01/code/css/common/reset.css
+++ b/c_project_01/code/css/common/reset.css
@@ -9,7 +9,8 @@ body {
 
 h1,h2,h3,h4,h5,h6,p,pre,q,blockquote,ul,ol,li,dl,dt,dd,img { 
   margin: 0; padding: 0; border:0;
-  font-size:100%;  font:inherit;
+  font-size:100%;  font-family:inherit;
+  line-height: 120%;
   vertical-align: baseline;
 }
 
@@ -41,5 +42,5 @@ table {
 abbr { text-decoration: none;}
 
 header,article,section,footer,nav,aside,figure,figcaption,main {
-  display:block;
+  display:block; margin: 0; padding: 0; border: 0;
 }
