--- a/c_project_01/code/css/src/main_v2.css
+++ b/c_project_01/code/css/src/main_v2.css
@@ -98,7 +98,7 @@
 /* #slideBox __________________________________________ */
 #slideBox   { 
 position: relative;
-width: 100%; height: 600px; padding-top:100px; box-sizing: border-box;
+width: 100%; height: 600px; box-sizing: border-box;
 background-color: #aaa; }
 
 /* ---------- */
@@ -108,15 +108,73 @@ background-color: #aaa; }
 }
 
 .slide_btn button{ 
-  width:60px; height:40px; background-color: #0cc;}
-.slide_btn .next {float:right;}
-.slide_btn .prev {float:left;}
+  width:60px; height:40px; 
+  background-image: url("../../img/main_page/indi_btn.png");
+  background-repeat: no-repeat;   
+  }
+.slide_btn button:hover { background-color: #fff; }
+.slide_btn button:focus { outline:2px solid #333;}
+  
+.slide_btn .next {float:right; background-position: -2px -2px;}
+.slide_btn .prev {float:left; background-position: -76px -2px;}
 
 /* ---------- */
-#adCon_01 { 
+.slide_area {
+  width: 100%; height: 100%; padding-top: 100px;
+  background-image: url("../../img/main_page/slideBox/slide_01_bg.png");
+  background-repeat: no-repeat; background-position: 50% 50%; background-size: cover;
+}
+.slide_content { 
+  position: relative;
   width: 780px; height: 400px; 
   margin:auto;
-  background-color: #ddd;
+  /* background-color: #ddd; */
+  }
+  .slide_content_part {
+    position: absolute; top: 0; bottom: 0; left: 0;
+    width:300px; height: 264px;
+    margin:auto;
+    /* background: #fff; */
+  }
+  
+  .slide_content_part h3 {
+    width: 100%; height: 60px;
+    margin-bottom: 5px;
+    font-size: 2.5rem; font-weight: 700;
+    line-height:60px; color:#171717;
+    text-transform: capitalize;
+  }
+  .slide_content_part p {
+    width: 100%; height:140px;
+    margin-bottom: 5px;
+    font-size:1.125rem; color:#505050;
+    line-height:150%;
+  }
+  
+  .slide_content_part .link {
+    width: 220px; height: 50px;
+  }
+  .link a {
+    display: block; width: 100%; height: 100%;
+    padding:0 18px; box-sizing: border-box;
+    line-height: 50px; color:#fff;
+    font-size:22px; font-size:1.375rem; font-weight: 700;
+    background-color: #1A5D54;
+  }
+  .link i {float:right; margin-top:15px;}
+  
+  .link a:hover { text-decoration: underline;}
+  .link a:focus { outline:4px solid #FFBD55;}
+  
+  .slide_img_part {float:right;
+    width:388px; height:408px; 
+  }
+  .slide_img_part > div {
+    width: 100%; height: 100%; 
+    background-repeat: no-repeat; background-position: 0 0; background-size: contain;
+  }
+  .slide_01 {
+    background-image: url("../../img/main_page/slideBox/slide_01_image.png");
   }
 
   
@@ -129,15 +187,16 @@ background-color: #aaa; }
   
 .area_title{
   width:940px; height:70px; 
-  margin:auto;
-  background-color:#aaa;
+  margin:auto; padding-top: 10px; box-sizing: border-box;
+  font-size:2.5rem; 
+  /* background-color:#aaa; */
 }
 
 .area_indicator{
   position: absolute; bottom:70px; left:0; right:0;
   width:140px; height:30px; 
   margin:auto;
-  background-color:#ccc;
+  /* background-color:#ccc; */
 }
 
 .area_indicator ul {
@@ -158,14 +217,20 @@ background-color: #aaa; }
   width:940px; height:370px; 
   /* margin:auto; margin-top:48px; margin-bottom: 50px; */
   margin:48px auto 0;
-  background-color:#aaa;
+  /* background-color:#aaa; */
 }
 
 .area_content ul { width: 100%; height: 100%;}
 .area_content li { 
   float:left; width:300px; height:370px; 
   margin-left:20px;
-  background-color: #0cc;}
+  /* background-color: #0cc; */
+  }
+  /* .area_content li a:focus {}
+  .area_content li a:hover {} */
+  .area_content li:nth-child(1) a {background-image: url("../../img/main_page/new_product_01.png");}
+  .area_content li:nth-child(2) a {background-image: url("../../img/main_page/new_product_02.png");}
+  .area_content li:nth-child(3) a {background-image: url("../../img/main_page/new_product_03.png");}
 
 
 /* #subBox ____________________________________________  */
