form 기타형식 및 버튼형식에 들어가는 내용 일부 수정

--- a/b_step_02/css/src/e_02_form_type_attr.css
+++ b/b_step_02/css/src/e_02_form_type_attr.css
@@ -24,6 +24,7 @@ fieldset > div {
 #usrId::placeholder,
 #usrPw::placeholder { color:#f00; font-weight: 700; }
 
+.img_btn { height:20px; }
 
 textarea { 
   width:500px; height:50px;
