--- a/c_project_01/code/css/page/c_loginBox.css
+++ b/c_project_01/code/css/page/c_loginBox.css
@@ -1,2 +1,22 @@
 /* c_loginBox.css */
 
+
+#loginBox {
+  width: 1100px; height: auto;
+  margin:auto; margin-top: 250px; margin-bottom:200px;
+  box-shadow:8px 8px 12px rgba(0,0,0,0.25);
+  border-radius:5px; 
+  overflow: hidden;
+  /* background-color: #ddf; */
+}
+
+.intro_part {
+  float:left;
+  width: 460px;  height:600px;
+  background-color: #aca;
+}
+.login_form {
+  float:left;
+  width: 640px;  height:600px;
+  background-color: #fda;
+}
