--- a/c_project_01/code/css/page/c_loginBox.css
+++ b/c_project_01/code/css/page/c_loginBox.css
@@ -13,8 +13,37 @@
 .intro_part {
   float:left;
   width: 460px;  height:600px;
+  padding-top: 160px; padding-right:60px; box-sizing:border-box;
+  text-align: right;
   background-color: #aca;
+  background-image: url("../../img/login_page/intro_part_img.png");
+  background-repeat: no-repeat;
+  background-position: 100% 50%;
 }
+.intro_inner {
+  float:right;
+  width: 250px; height:auto;
+  color:#fff; 
+}
+
+.company_logo { 
+  display:inline-block;
+  width: 120px; height:70px; 
+  background-image: url("../../img/login_page/osam_sub_logo.png");
+  background-image: url("../../img/login_page/osam_sub_logo.svg");
+  background-repeat: no-repeat; background-position: 50% 50%; 
+  background-size: contain;
+}
+.intro_inner > h2 { 
+  width: 100%; height: auto; 
+  margin-top:50px; margin-bottom: 15px;
+  font-size: 40px; font-weight: 700; text-transform:capitalize;
+}
+.intro_inner > p {
+  width: 100%; height: auto;
+  font-size:18px; font-weight: 400;
+}
+
 .login_form {
   float:left;
   width: 640px;  height:600px;
