--- a/c_project_01/code/css/page/c_loginBox.css
+++ b/c_project_01/code/css/page/c_loginBox.css
@@ -47,5 +47,27 @@
 .login_form {
   float:left;
   width: 640px;  height:600px;
+  padding-top:220px; box-sizing: border-box;
   background-color: #fda;
+}
+
+form,fieldset{
+  margin: 0; padding: 0; border: 0;
+}
+legend { display: block; width: 0; height: 0; position: absolute; z-index: -1; overflow: hidden;}
+
+form {
+  width: 460px; height: 300px;
+  margin:auto;
+  background-color: #fff;
+}
+
+fieldset:nth-of-type(1) {
+  width:100%; height:130px;
+  margin-bottom: 50px;
+  background-color: #aca;
+}
+fieldset:nth-of-type(2){
+  width: 100%; height: 120px;
+  background-color: #a7a;
 }
