--- a/c_project_01/code/css/page/c_loginBox.css
+++ b/c_project_01/code/css/page/c_loginBox.css
@@ -71,3 +71,14 @@ fieldset:nth-of-type(2){
   width: 100%; height: 120px;
   background-color: #a7a;
 }
+.user_input {
+  width: 100%; height:50px;
+  margin-bottom:30px;
+  border-bottom: 2px solid #1A5D54;
+  padding-bottom: 10px;
+  box-sizing: border-box;
+}
+.user_input:last-child {  margin-bottom: 0; }
+
+
+.icon {display:inline-block;  width: 40px; height: 40px; background-color: #f55;}
