--- a/c_project_01/code/css/page/c_loginBox.css
+++ b/c_project_01/code/css/page/c_loginBox.css
@@ -48,7 +48,7 @@
   float:left;
   width: 640px;  height:600px;
   padding-top:220px; box-sizing: border-box;
-  background-color: #fda;
+  /* background-color: #fda; */
 }
 
 form,fieldset{
@@ -65,7 +65,7 @@ form {
 fieldset:nth-of-type(1) {
   width:100%; height:130px;
   margin-bottom: 50px;
-  background-color: #aca;
+  /* background-color: #aca; */
 }
 fieldset:nth-of-type(2){
   width: 100%; height: 120px;
@@ -75,10 +75,28 @@ fieldset:nth-of-type(2){
   width: 100%; height:50px;
   margin-bottom:30px;
   border-bottom: 2px solid #1A5D54;
-  padding-bottom: 10px;
+  padding-left:8px; padding-bottom: 10px;
   box-sizing: border-box;
 }
 .user_input:last-child {  margin-bottom: 0; }
+.user_input label { float:left; margin-right: 30px;}
+.user_input input { 
+  float:left; width:340px; height: 100%; 
+  border:0; padding: 0; 
+  font-size: 1rem; color:#757575; text-indent:8px;
+}
 
+.icon {
+  display:block; width: 40px; height: 40px; 
+  background-repeat: no-repeat;
+  background-size: contain; background-position: 50% 50%;
+}
 
-.icon {display:inline-block;  width: 40px; height: 40px; background-color: #f55;}
+label[for="usrMail"] i {
+  background-image: url("../../img/login_page/mail.png");
+  background-image: url("../../img/login_page/mail.svg");
+}
+label[for="usrPw"] i {
+  background-image: url("../../img/login_page/key.png");
+  background-image: url("../../img/login_page/key.svg");
+}
