--- a/c_project_01/code/css/page/c_loginBox.css
+++ b/c_project_01/code/css/page/c_loginBox.css
@@ -54,7 +54,10 @@
 form,fieldset{
   margin: 0; padding: 0; border: 0;
 }
-legend { display: block; width: 0; height: 0; position: absolute; z-index: -1; overflow: hidden;}
+legend { 
+  display: block; width: 0; height: 0; 
+  position: absolute; z-index: -1; overflow: hidden;
+}
 
 form {
   width: 460px; height: 300px;
@@ -69,7 +72,8 @@ fieldset:nth-of-type(1) {
 }
 fieldset:nth-of-type(2){
   width: 100%; height: 120px;
-  background-color: #a7a;
+  text-align: center;
+  /* background-color: #a7a; */
 }
 .user_input {
   width: 100%; height:50px;
@@ -100,3 +104,33 @@ label[for="usrPw"] i {
   background-image: url("../../img/login_page/key.png");
   background-image: url("../../img/login_page/key.svg");
 }
+
+.btn_inner {width: 100%; height: auto;}
+input[type="submit"] {
+  width: 300px; height: 45px;
+  margin-bottom: 34px;
+  border:0; border-radius:8px;
+  color:#fff; font-size:22px; font-weight: 700;
+  background-color: #1a5d54;
+  cursor: pointer;
+}
+
+.btn_inner a {
+  display:inline-block;
+  font-size:16px;  background-color: #fff;
+}
+.btn_inner a:nth-of-type(1) {
+  padding:12px 10px; margin-right:30px;
+}
+.btn_inner a:nth-of-type(2) {
+  padding:12px 25px;
+  border:1px solid #333;
+  box-shadow:0 4px 4px rgba(0,0,0,0.25);
+  border-radius:8px;
+}
+
+input[type="submit"]:hover {}
+.btn_inner a:hover {}
+
+input[type="submit"]:focus {}
+.btn_inner a:focus {}
