실습예제 - 로그인페이지 - 버튼 hover 및 focus처리 와 배경이미지 처리

--- a/c_project_01/code/css/page/c_loginBox.css
+++ b/c_project_01/code/css/page/c_loginBox.css
@@ -1,5 +1,11 @@
 /* c_loginBox.css */
 
+#wrap {
+  background-image: url("../../img/login_page/login_bg.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
 
 #loginBox {
   width: 1100px; height: auto;
@@ -7,7 +13,8 @@
   box-shadow:8px 8px 12px rgba(0,0,0,0.25);
   border-radius:5px; 
   overflow: hidden;
-  /* background-color: #ddf; */
+  background-color: #fff;
+
 }
 
 .intro_part {
@@ -62,7 +69,7 @@ legend {
 form {
   width: 460px; height: 300px;
   margin:auto;
-  background-color: #fff;
+  /* background-color: #fff; */
 }
 
 fieldset:nth-of-type(1) {
@@ -129,8 +136,12 @@ input[type="submit"] {
   border-radius:8px;
 }
 
-input[type="submit"]:hover {}
-.btn_inner a:hover {}
+input[type="submit"]:hover { box-shadow:0 8px 8px rgba(0,0,0,0.25);}
+.btn_inner a:hover { font-weight: 700; color:#1a5d54;}
 
-input[type="submit"]:focus {}
-.btn_inner a:focus {}
+input[type="submit"]:focus { 
+  border:3px solid #1a5d54; box-sizing: border-box; 
+  color:#1a5d54;
+  outline-offset: 10px;
+  background-color: #fff; }
+.btn_inner a:focus { background-color: #1a5d54; color:#fff;}
