--- a/c_project_01/code/css/page/b_headBox.css
+++ b/c_project_01/code/css/page/b_headBox.css
@@ -1,11 +1,12 @@
 /* b_headBox.css */
 #headBox { 
-  position: fixed; top: 0; left:0; /* right:0; margin:auto; */
+  position: fixed; top: 0; left:0; 
   z-index:1500;
-  width: 100%; /* max-width:1440px;*/
-  height: auto; 
+  width: 100%; height: auto; 
   padding:20px 50px 10px; box-sizing: border-box;
-  background-color: #fff; }
+  background-color: #fff; 
+  box-shadow: 0 4px 4px rgba(0,0,0,0.25);
+}
   
   .area_head {
     width: 100%; max-width:1440px;
