--- a/c_project_01/code/css/page/c_loginBox.css
+++ b/c_project_01/code/css/page/c_loginBox.css
@@ -18,10 +18,11 @@
 }
 
 .intro_part {
-  float:left;
+  float:left; position: relative; z-index:100;
   width: 460px;  height:600px;
   padding-top: 160px; padding-right:60px; box-sizing:border-box;
   text-align: right;
+  overflow: hidden;
   background-color: #aca;
   background-image: url("../../img/login_page/intro_part_img.png");
   background-repeat: no-repeat;
@@ -51,6 +52,16 @@
   font-size:18px; font-weight: 400;
 }
 
+.video_inner {
+  position: absolute; top: 0; right: 0; z-index:-1;
+  width: 100%; height: 100%; background-color: #f06;
+}
+
+.video_inner video {
+  float:right;
+  width: auto; min-width:100%; height:100%;
+}
+/* ------------------------------------------------ */
 .login_form {
   float:left;
   width: 640px;  height:600px;
