--- a/b_step_02/css/src/f_02_border_radius.css
+++ b/b_step_02/css/src/f_02_border_radius.css
@@ -8,3 +8,17 @@
 }
 
 .radius li:nth-child(1) { border-radius:50px;}
+.radius li:nth-child(2) { border-radius:50px 0;}
+.radius li:nth-child(3) { border-radius:50px 100px 0;}
+.radius li:nth-child(4) { border-radius:10px 30px 50px 100px;}
+.radius li:nth-child(5) { border-radius:3rem;}
+.radius li:nth-child(6) { border-radius:10%;}
+.radius li:nth-child(7) { border-radius:50%;}
+.radius li:nth-child(8) { border-radius:100%;}
+.radius li:nth-child(9) { height:15rem; border-radius:100%;}
+.radius li:nth-child(10) { height:15rem; border-radius:30rem;}
+.radius li:nth-child(11) {  padding: 0; }
+.radius li:nth-child(11) a{
+  display: block; width: 100%; height: 100%;
+  border-radius:30rem;
+  background-color: #fac;}
