--- a/b_step_02/css/src/f_02_border_radius.css
+++ b/b_step_02/css/src/f_02_border_radius.css
@@ -22,3 +22,21 @@
   display: block; width: 100%; height: 100%;
   border-radius:30rem;
   background-color: #fac;}
+
+
+  /* --------------------------------------- */
+  .radius_2 li { 
+    width: 20rem; height: 20rem; 
+    padding:1rem; box-sizing: border-box;
+    color:#fff; font-size:2rem;
+    background-color: #05a;
+  }
+
+  .radius_2 li:nth-child(1) { border:20px solid #fa0; border-radius:40px; }
+  .radius_2 li:nth-child(2) {
+    box-sizing:content-box; 
+    border:20px solid #fa0; border-radius:40px; }
+    .radius_2 li:nth-child(3) { border-radius:30px; border-top-left-radius:0; }
+    .radius_2 li:nth-child(4) { border-radius:30px; border-bottom-right-radius:0; }
+    .radius_2 li:nth-child(5) { border-bottom-left-radius:2rem 10rem; }
+    .radius_2 li:nth-child(6) {width:15rem; border-bottom-left-radius:40% 5%; }
