--- a/b_step_02/css/src/f_03_transform.css
+++ b/b_step_02/css/src/f_03_transform.css
@@ -27,3 +27,27 @@
  .sc_02:hover { transform:scale(0.5); } 
  .sc_03:hover { transform:scale(130%); } 
  .sc_04:hover { transform:scale(130%, 150%); } 
+
+ /* rotate 각도: deg */
+ .ro {
+   float:left;
+   width: 6.25rem; height: 6.25rem;
+   margin:3rem;
+   color:#fff;
+   background-color: #c59;
+ }
+
+ .ro_01:hover {transform: rotateZ(45deg);}
+ .ro_02:hover {transform: rotateZ(180deg);}
+ .ro_03:hover {transform: rotateX(45deg);}
+ .ro_04:hover {transform: rotateY(180deg);}
+ .ro_05:hover {transform: rotate(45deg); transition:all 300ms linear;}
+ .ro_05 > span {
+   display:block; width: 100%; height: 100%;    
+   background-color: rgba(20,20,20,0.5);  
+   transition:all 300ms linear;
+  }
+
+  .ro_05:hover > span {
+    transform: rotate(-45deg);
+  }
