--- a/c_project_01/code/css/src/main_v3.css
+++ b/c_project_01/code/css/src/main_v3.css
@@ -120,7 +120,7 @@ background-color: #aaa; }
 
 /* ---------- */
 .slide_area {
-  width: 100%; height: 100%; padding-top: 100px;
+  width: 100%; height: 100%; padding-top: 100px; box-sizing: border-box;
   background-image: url("../../img/main_page/slideBox/slide_01_bg.png");
   background-repeat: no-repeat; background-position: 50% 50%; background-size: cover;
 }
@@ -183,7 +183,8 @@ background-color: #aaa; }
   position: relative;
   width: 100%; height:700px; 
   padding-top:62px; box-sizing: border-box;
-  background-color: #eee; }
+  /* background-color: #eee;  */
+}
   
 .area_title{
   width:940px; height:70px; 
@@ -207,11 +208,19 @@ background-color: #aaa; }
   float:left;
   width: 30px; height: 30px; 
   margin-left:25px;
-  background-color: #0cc;
+  /* background-color: #0cc; */
 }
 .area_indicator li:first-child {
   margin-left:0;
 }
+
+.area_indicator a {
+  border-radius:100%;
+  background-color: #c4c4c4;
+}
+.area_indicator li.act a {background-color: #1A5D54;}
+
+
 
 .area_content{
   width:940px; height:370px; 
@@ -285,38 +294,103 @@ background-color: #aaa; }
   .sub_area_img {
     float:left;
     width: 460px; height: 300px;
+    transform:translateY(-25px);
     /* background-color: #0cc; */
     background-image: url("../../img/main_page/sub_banner_image.png");
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
+    box-shadow:30px 25px 0 #EFEFEF;
   }
+  
 
 /* #bestBox ____________________________________________  */
 #bestBox { 
   width: 100%; height: 700px; 
-  padding-top:175px; box-sizing: border-box;
-  background-color: #eee; }
-#bestBox > .area {
-  height: 380px; 
-  background-color: #aaa;
-}
+  padding-top:175px; box-sizing: border-box; }
+#bestBox > .area {  height: 380px; }
 
   .best_area { 
-    float:left; width: 230px; height: 380px;
-    background-color: #fa0;  
+    float:left; width: 230px; height: 380px; 
   }
-    
+  .best_area h2 { 
+    width: 100%; height: 120px; 
+    margin-bottom:20px;
+    line-height:160%;
+    font-size:40px; color:#171717; word-break: keep-all;
+  }
+  .best_area p { width: 100%; height: 80px; margin-bottom:30px;}
+  .best_btn {
+    width: 100%; height: 35px; 
+    padding:2px 10px; box-sizing: border-box;
+    margin-bottom:25px; 
+  }
+  .best_btn > button {
+    width: 100px; height: 30px; background-color: #c4c4c4;
+    border-radius:4px;
+  }
+
+  .best_btn > button:first-of-type { float:right;}
+  .best_btn > button:last-of-type { float:left;}
+
+  .more_btn {
+    width: 100%; height: 55px; 
+    padding:2px 10px; box-sizing: border-box;}  
+  .more_btn a {
+    display: block; width: 100%; height: 100%; 
+    text-align: center; line-height:55px; color:#fff;
+    border-radius:4px;
+    background-color: #1A5D54;
+  }
+
   .best_card_list { 
-    float:right; width:800px; height: 380px;
-    background-color: #fff;
+    float:right; width:800px; height: 380px; 
+    /* background-color: #fdd; */
+    overflow: hidden;
   }
-  .best_card_list ul {  width: 100%; height: 100%; }
+  .best_card_list ul {  width: 200%; height: 100%; }
   .best_card_list li { 
     float:left; width: 240px; height: 380px; 
-    margin-left:40px;
-    background-color: #0cc;
+    margin-left:40px; border:1px solid #757575; border-radius:3px; padding:10px;
+    box-sizing: border-box;
   }
+
+  .best_card_list li a {display: block; width: 100%; height: 100%; }
+  .best_card_list .card_img { 
+    width: 100%; height: 180px; 
+    margin-bottom:16px;
+    border-radius:3px; 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+  .best_card_list dl {
+    width: 100%; height:160px; 
+  }
+  .card_sub_title {
+    width: 100%; height: 30px;
+    margin-bottom: 4px;
+    font-size: 22px; font-weight: 700; line-height: 30px; color:#171717;
+  }
+  .card_narr {
+    width: 100%; height: 90px;
+    color:#777; font-size:16px;
+    line-height:1.5;
+  }
+  .card_date {
+    width: 100%; height:16px;
+    padding-top: 8px;
+    border-top:1px solid #555;
+    font-size: 12px; color:#555;
+  }
+
+  /* .card_img 이미지 삽입 */
+  .best_card_list li .card_img { background-image: url("../../img/main_page/gallery_main_01.png");}
+  .best_card_list li:nth-child(1) .card_img { background-image: url("../../img/main_page/best_img_01.png");}
+  .best_card_list li:nth-child(2) .card_img { background-image: url("../../img/main_page/best_img_02.png");}
+  .best_card_list li:nth-child(3) .card_img { background-image: url("../../img/main_page/best_img_03.png");}
+
+  .best_card_list li:hover { transform:scale(1.2)}
 
 
 /* #galleryBox ____________________________________________  */
@@ -407,7 +481,7 @@ background-color: #aaa; }
 #footBox    { 
   width: 100%; height: 450px; 
   padding-top: 68px; box-sizing: border-box;
-  background-color: #777; }
+  background-color: #333; }
 
 .area_foot {
   height: auto;  
@@ -423,13 +497,35 @@ background-color: #aaa; }
     }
   .info_company{
     width:100%; height:auto; min-height: 135px;
+    font-size:14px; color:#fff;
     /* background-color: #aaa; */
   }
+
   .company_content {
     float: left;
-    width: 500px; height: 200px; 
-    background-color: #0cc;
+    width: 600px; height: 200px; 
+
   }
+
+  .list_corp { 
+    width: 100%; height: 27px; margin-bottom: 25px;
+  }
+  .list_corp li {float:left; margin-left:14px;}
+  .list_corp li:first-child {margin-left:0px;}
+  .list_corp li a {padding:5px;}
+
+  address {width: 100%; height: auto; font-style:normal;}
+  address p{ width: 100%; height: auto;  padding-left:8px;}
+  address dl{
+    width: 100%; height: auto; margin-top:5px; }
+  address dl:last-of-type {    margin-bottom: 30px;  }
+  address dt{ display:inline-block; padding:5px; text-transform: uppercase;}
+  address dt::after{content:":"; padding-left:8px;}
+  address dd{ display:inline-block; padding:5px;}
+  address dd::after{content:"|"; padding-left:8px;}
+  address dd:last-of-type::after{content:""; display: none;}
+
+
   .social_family {
     float:right;
     width: 200px; height: 160px;
