--- a/b_step_02/css/common/reset.css
+++ b/b_step_02/css/common/reset.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 /* reset.css */
-:root { font-size:16px; }
+:root { 
+  font-size:16px; 
+  --color-red :#FC7676;
+}
 body { 
   margin: 0; line-height:100%;
   /* font-family: sans-serif; */
