--- a/b_step_02/css/src/g_03_rwd.css
+++ b/b_step_02/css/src/g_03_rwd.css
@@ -2,5 +2,5 @@
 
 @import url("../rwd/a_old_device.css");
 @import url("../rwd/b_smartphone.css");
-/* @import url("../rwd/c_table.css");
-@import url("../rwd/d_laptop.css");  */
+@import url("../rwd/c_table.css");
+/*@import url("../rwd/d_laptop.css");  */
