반응형웹 노트북 기준 이상의 크기 작성시 처리방법

--- a/b_step_02/css/src/g_03_rwd.css
+++ b/b_step_02/css/src/g_03_rwd.css
@@ -3,4 +3,4 @@
 @import url("../rwd/a_old_device.css");
 @import url("../rwd/b_smartphone.css");
 @import url("../rwd/c_table.css");
-/*@import url("../rwd/d_laptop.css");  */
+@import url("../rwd/d_laptop.css"); 
