--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -2,6 +2,13 @@
 
 @media screen and (min-width:600px) and (max-width:1023px) {
   /* 기준 디바이스 크기 : 600px  */
-  body { background-color: var(--light_gray_01);}
-}
+  body {background-color: #fee;}
+  #wrap {
+    width:100%; min-width:auto;
+    height:auto; min-height:100vh;
+    margin:auto; padding-top:0;
+  }
+
+
+}/* @media screen and (min-width:600px) and (max-width:1023px) */
 
