--- a/c_project_01/code/css/main_page/b_smartphone.css
+++ b/c_project_01/code/css/main_page/b_smartphone.css
@@ -11,31 +11,28 @@
   }
 /* #headBox __________________________________________ */
   #headBox { 
-    /* position: fixed; top: 0; left:0;     
-    z-index:1500; */
+    position: fixed; top: 0; left:0; z-index:1500;
     width: 100%; 
     height: auto; 
     height: 50px;
-
     /* padding:20px 50px 10px; box-sizing: border-box; */
     background-color: #fff; 
   }
   #headBox > * {display: none;}
 
-
-
 /* #slideBox __________________________________________ */
 #slideBox   { 
   position: relative;
-  width: 100%; height: 600px; box-sizing: border-box;
-  background-color: #aaa; }
+  width: 100%; height:100vh; min-height:500px; 
+  padding-top: 50px; box-sizing: border-box;
+  background-color: #afd; }
 
 /* #newBox ____________________________________________  */
 #newBox { 
   position: relative;
-  width: 100%; height:700px; 
-  padding-top:62px; box-sizing: border-box;
-  /* background-color: #eee;  */
+  width: 100%; height:100vh; min-height:600px; 
+  /* padding-top:62px; box-sizing: border-box; */
+  background-color: #edd; 
 }
 
 /* #subBox ____________________________________________  */
