--- a/c_project_01/code/css/main_page/d_laptop.css
+++ b/c_project_01/code/css/main_page/d_laptop.css
@@ -11,7 +11,7 @@
   }
 /* #headBox __________________________________________ */
 #headBox { 
-  /* position: fixed; top: 0; left:0; z-index:1500; */
+  position: fixed; top: 0; left:0; z-index:1500;
   width: 100%; height: 100px; 
   /* padding:20px 50px 10px; box-sizing: border-box; */
   background-color: #fff; 
@@ -21,15 +21,16 @@
 /* #slideBox __________________________________________ */
 #slideBox   { 
 position: relative;
-width: 100%; height: 600px; box-sizing: border-box;
-background-color: #aaa; }
+width: 100%; height:100vh; min-height: 600px;
+padding-top: 100px; box-sizing: border-box;
+background-color: #fac; }
 
 /* #newBox ____________________________________________  */
 #newBox { 
-position: relative;
-width: 100%; height:700px; 
-padding-top:62px; box-sizing: border-box;
-/* background-color: #eee;  */
+  position: relative;
+  width: 100%; height:700px; 
+  /* padding-top:62px; box-sizing: border-box; */
+  /* background-color: #eee;  */
 }
 
 /* #subBox ____________________________________________  */
