--- a/c_project_01/code/css/main_page/e_pc.css
+++ b/c_project_01/code/css/main_page/e_pc.css
@@ -10,7 +10,7 @@
   }
 /* #headBox __________________________________________ */
 #headBox { 
-  /* position: fixed; top: 0; left:0; z-index:1500; */
+  position: fixed; top: 0; left:0; z-index:1500;
   width: 100%; height: 100px; 
   /* padding:20px 50px 10px; box-sizing: border-box; */
   background-color: #fff; 
@@ -20,15 +20,16 @@
 /* #slideBox __________________________________________ */
 #slideBox   { 
 position: relative;
-width: 100%; height: 600px; box-sizing: border-box;
-background-color: #aaa; }
+width: 100%; height:100vh; min-height: 700px; 
+padding-top: 100px; box-sizing: border-box;
+background-color: #7af; }
 
 /* #newBox ____________________________________________  */
 #newBox { 
 position: relative;
 width: 100%; height:700px; 
-padding-top:62px; box-sizing: border-box;
-/* background-color: #eee;  */
+/* padding-top:62px; box-sizing: border-box; */
+background-color: #eee; 
 }
 
 /* #subBox ____________________________________________  */
