--- a/c_project_01/code/css/main_page/b_smartphone.css
+++ b/c_project_01/code/css/main_page/b_smartphone.css
@@ -3,76 +3,46 @@
 @media screen and (max-width:599px) {
   /* 기준 디바이스 크기 : 320px  */
   body {background-color: #eee;}
-  #wrap {
-    width:100%; 
-    min-width:320px;
-    height:auto; min-height:100vh;
-    margin:auto; padding-top:0;
-  }
+  /* #wrap { } */
 /* #headBox __________________________________________ */
-  #headBox { 
-    position: fixed; top: 0; left:0; z-index:1500;
-    width: 100%; 
-    height: auto; 
-    height: 50px;
-    /* padding:20px 50px 10px; box-sizing: border-box; */
-    background-color: #fff; 
-  }
+  #headBox { height: 3.125rem; padding:0.5rem 0.625rem; }
   #headBox > * {display: none;}
 
 /* #slideBox __________________________________________ */
 #slideBox   { 
-  position: relative;
-  width: 100%; height:100vh; min-height:500px; 
-  padding-top: 50px; box-sizing: border-box;
-  background-color: #afd; }
+  min-height:31.25rem; 
+  padding-top: 3.125rem;
+}
 
 /* #newBox ____________________________________________  */
 #newBox { 
-  position: relative;
-  width: 100%; height:100vh; min-height:600px; 
-  /* padding-top:62px; box-sizing: border-box; */
-  background-color: #edd; 
+  height:100vh; min-height:37.5rem; 
+  padding-top: 5rem; padding-bottom: 5.625rem;
 }
 
 /* #subBox ____________________________________________  */
-#subBox     { 
-  position: relative;
-  width: 100%; height: 350px; 
-  /* padding-top:50px; box-sizing: border-box; */
-  /* background-color: #aaa;  */
-  background-color: #ffbd55; 
-}
+#subBox { height:100vh; min-height: 31.25rem; }
 
 /* #bestBox ____________________________________________  */
 #bestBox { 
-  width: 100%; height: 700px; 
-  padding-top:175px; box-sizing: border-box; 
+  height:auto; min-height: 43.75rem;
+  padding: 2.5rem; padding-bottom: 8.75rem; 
 }
 
 /* #galleryBox ____________________________________________  */
-#galleryBox {   
-  width: 100%; height: 750px; 
-  padding-top: 75px; box-sizing: border-box;
-  /* background-color: #ccc;  */
-  background-color: rgba(255, 189, 85, 0.2);
+#galleryBox {  
+  height:auto; min-height: 61.25rem; 
+  padding-top: 1.5rem; padding-bottom: 8.75rem;
 }
 
 /* #sponsorBox ____________________________________________  */
 #sponsorBox { 
-  width: 100%; height: 100px; 
-  /* padding:10px 0; box-sizing: border-box; */
-  /* background-color: #999;  */
+  height: 25rem;
 }
 
 /* #footBox ____________________________________________  */
-#footBox    { 
-  width: 100%; height: 450px; 
-  padding-top: 68px; box-sizing: border-box;
-  background-color: #333; 
-}
-
-
+#footBox { height: 26.5625rem; }
+#footBox > * {display: none;}
 
 /* =========================================== */
 } /* @media screen and (max-width:599px) */
