--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -3,72 +3,46 @@
 @media screen and (min-width:600px) and (max-width:1023px) {
   /* 기준 디바이스 크기 : 600px  */
   body {background-color: #fee;}
-  #wrap {
-    width:100%; min-width:auto;
-    height:auto; min-height:100vh;
-    margin:auto; padding-top:0;
-  }
+  /* #wrap { } */
 
 /* #headBox __________________________________________ */
-#headBox { 
-  position: fixed; top: 0; left:0; z-index:1500;
-  width: 100%; height: 50px; 
-  /* padding:20px 50px 10px; box-sizing: border-box; */
-  background-color: #fff; 
-}
+#headBox { height: 3.125rem; padding:0.5rem 1.0625rem; }
 #headBox > * {display: none;}
 
 /* #slideBox __________________________________________ */
 #slideBox   { 
-  position: relative;
-  width: 100%; height:100vh; min-height:400px; 
-  padding-top: 50px; box-sizing: border-box;
-  background-color: #aaa; }
+  min-height:25rem; 
+  padding-top: 3.125rem;
+}
 
 /* #newBox ____________________________________________  */
 #newBox { 
-  position: relative;
-  width: 100%; height:100vh; min-height:700px; 
-  padding-top:62px; box-sizing: border-box;
-  /* background-color: #eee;  */
+  height:100vh; min-height:43.75rem;   
+  padding-top: 3.75rem; padding-bottom: 5.625rem;
 }
 
 /* #subBox ____________________________________________  */
-#subBox     { 
-  position: relative;
-  width: 100%; height: 350px; 
-  /* padding-top:50px; box-sizing: border-box; */
-  /* background-color: #aaa;  */
-  background-color: #ffbd55; 
-}
+#subBox { height:37.5rem; }
 
 /* #bestBox ____________________________________________  */
 #bestBox { 
-  width: 100%; height:100vh; min-height: 600px; 
-  /* padding-top:175px; box-sizing: border-box;  */
+  height:100vh; min-height: 37.5rem; 
+  padding: 3.75rem 3.125rem; padding-bottom: 5.9375rem;
 }
 
 /* #galleryBox ____________________________________________  */
 #galleryBox {   
-  width: 100%; height: 750px; 
-  padding-top: 75px; box-sizing: border-box;
-  /* background-color: #ccc;  */
-  background-color: rgba(255, 189, 85, 0.2);
+  height: 61.25rem;
+  padding-top: 7.75rem; padding-bottom: 7.5rem;
 }
 
 /* #sponsorBox ____________________________________________  */
 #sponsorBox { 
-  width: 100%; height: 100px; 
-  /* padding:10px 0; box-sizing: border-box; */
-  /* background-color: #999;  */
+  height: 18.75rem;
 }
 
 /* #footBox ____________________________________________  */
-#footBox    { 
-  width: 100%; height: 450px; 
-  padding-top: 68px; box-sizing: border-box;
-  background-color: #333; 
-}
+#footBox    { height: 26.5625rem; }
 
 
 }/* @media screen and (min-width:600px) and (max-width:1023px) */
